atualizaçao do projeto front

--- a/styles/base.css
+++ b/styles/base.css
@@ -10,9 +10,9 @@ section {
 .container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex;
     padding: 100px;
     flex-direction: column;
-    position: center;
+    position: flex;
 }
 
