--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -3,7 +3,8 @@ html {
     scroll-padding-top: 10vh;
 }
 body { 
-    font-family: 'Raleway', sans-serif; 
+    font-family: 'Lato', sans-serif;
+
 }
 
 section {
